--- a/FloridaUCTF/Views/Home/Index.cshtml
+++ b/FloridaUCTF/Views/Home/Index.cshtml
@@ -91,13 +91,9 @@
 			</div>
 		</div>
 		<div>
-			@Html.ActionLink("Add Offender", "AddOffender","Home");
+			@Html.ActionLink("Add Offender", "AddOffender","Home", new { @class = "btn btn-warning" } );
 		</div>
-		<div class="form-group">
-			<div class="col-md-12 text-left">
-				<input type="submit" value="Add Offender" class="btn btn-info" />
-			</div>
-		</div>
+
 	</div>
 }
 
