--- a/FloridaUCTF/Views/Home/AddCase.cshtml
+++ b/FloridaUCTF/Views/Home/AddCase.cshtml
@@ -4,8 +4,7 @@
 	ViewBag.Title = "Add a Case";
 }
 
-<h2>AddCase</h2>
-@Html.Partial("_OffenderSummary")
+<h2>Add a Case for @Model.Offender.FirstName @Model.Offender.LastName  </h2>
 
 @using (Html.BeginForm())
 {
@@ -14,7 +13,6 @@
 	<div class="form-horizontal">
 		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-		<div class="col-md-4">
 			<div class="panel group-heading"> CASE INFORMATION </div>
 			<div class="form-group">
 				@Html.LabelFor(model => model.CaseNumber, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -26,7 +24,7 @@
 			<div class="form-group">
 				@Html.LabelFor(model => model.CaseDate, htmlAttributes: new { @class = "control-label col-md-2" })
 				<div class="col-md-10">
-					@Html.EditorFor(model => model.CaseDate, new { htmlAttributes = new { @class = "form-control" } })
+					@Html.EditorFor(model => model.CaseDate, "{0:MM/dd/yyyy}", new { htmlAttributes = new { @class = "form-control" } })
 					@Html.ValidationMessageFor(model => model.CaseDate, "", new { @class = "text-danger" })
 				</div>
 			</div>
@@ -46,8 +44,6 @@
 					@Html.ValidationMessageFor(model => model.CaseCounty, "", new { @class = "text-danger" })
 				</div>
 			</div>
-		</div>
-		<div class="col-md-6">
 			<div class="panel group-heading"> OFFENDER - WHEN CITED </div>
 			<div class="form-group">
 				@Html.LabelFor(model => model.BusinessName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -87,19 +83,17 @@
 					</div>
 				</div>
 			@*</div>*@
-		</div>
-
 
 		<div class="form-group">
 			<div class="col-md-offset-2 col-md-10">
-				<input type="submit" value="Create" class="btn btn-default" />
+				<input type="submit" value="Create" class="btn btn-primary" />
 			</div>
 		</div>
 	</div>
 }
 
 <div>
-	@Html.ActionLink("Back to List", "Index")
+	@Html.ActionLink("Back to Search", "Index")
 </div>
 
 @section Scripts {
