--- a/FloridaUCTF/Content/Site.css
+++ b/FloridaUCTF/Content/Site.css
@@ -41,6 +41,13 @@ textarea {
 .cit_num_box {
 	border-right: 2px lightblue dotted;
 }
+.checkbox-col {
+	padding-right : 0;
+}
+.checkbox-label {
+	margin-bottom : 0;
+	margin-top : 5px;
+}
 .field-label {
 	float: left;
     width: 160px;
@@ -53,7 +60,8 @@ textarea {
 }
 .long-text {
 	width: auto;
-	max-height: 50px;
+	max-height: 75px;
+	max-width : 750;
 	overflow : auto;
 	text-overflow : ellipsis;
 	/*overflow: auto;*/
