--- a/FloridaUCTF/Views/Home/_AddCitation.cshtml
+++ b/FloridaUCTF/Views/Home/_AddCitation.cshtml
@@ -6,11 +6,10 @@
 	@Html.AntiForgeryToken()
 
 	<div class="form-horizontal">
-		<h4>Citation</h4>
 		<hr />
 		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 		<div class="row">
-			<div class="col-md-2">
+			<div class="col-md-4">
 				<div class="form-group">
 					@Html.LabelFor(model => model.CitationNumber, htmlAttributes: new { @class = "control-label col-md-2" })
 					<div class="col-md-10">
@@ -19,22 +18,23 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-10">
+			<div class="col-md-8">
 				<div class="form-group">
-					@Html.LabelFor(model => model.StatuteOrdinance, htmlAttributes: new { @class = "control-label col-md-3" })
-					<div class="col-md-10">
+					@Html.LabelFor(model => model.StatuteOrdinance, htmlAttributes: new { @class = "control-label col-md-3 text-left" })
+					<div class="col-md-9">
 						@Html.EditorFor(model => model.StatuteOrdinance, new { htmlAttributes = new { @class = "form-control" } })
 						@Html.ValidationMessageFor(model => model.StatuteOrdinance, "", new { @class = "text-danger" })
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="form-group">
+				@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-1" })
 
-				<div class="form-group">
-					@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-					<br />
-					<div class="col-md-10">
-						@Html.TextAreaFor(model => model.Description, 5, 100, new { htmlAttributes = new { @class = "form-control" } })
-						@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-					</div>
+				<div class="col-md-11">
+					@Html.TextAreaFor(model => model.Description, 5, 100, new { htmlAttributes = new { @class = "form-control long-text" } })
+					@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
 				</div>
 			</div>
 		</div>
